{
    "name": "InputController",
    "maps": [
        {
            "name": "RobotMove",
            "id": "cf02dba4-6669-4b4e-b544-6eb657c45587",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "881d75b5-0369-49ec-8925-4afac701e870",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "ceee1192-b5f2-4ecc-8899-a5bc42194a44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "5bb813dd-70e8-44cc-a632-ba66b47e4704",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af08a28b-6e14-4022-8998-5adaa266324a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71eaf41c-a2e1-4fcf-bf50-b895385d1f2b",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c926269b-d23b-4bd7-ba8d-1b7d3f5adc2a",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMove",
            "id": "1ba47629-5788-449b-b62e-fdb3d818bcd0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "845b3986-6785-4896-8bba-e156683a62a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "9f799b02-bd81-4aed-8396-c04d928fe0ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0d43a4ef-8b28-4c2a-bc1e-69d9c00c094f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "26f163e5-f9bb-4b55-a4ed-0cdc48e8382a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "045d49a5-c914-40a3-88f8-66d6d1050a29",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "75212fcd-881b-4fe6-971a-1fdc06c713f9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8cfe72ad-d524-4b93-9139-d826b1a723ec",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1278c2e1-a4c9-41fd-b544-6e57dbc82941",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a4e30b47-9ede-4260-92d8-f155e2a5f3a8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "26c9a71e-89c2-4d47-a487-e8dcb4f9872a",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "885c547b-dec9-4558-add9-dad67cc22bb1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}